@@ -1,14 +1,4 @@
 <?php
-/**
-* Smarty Internal Plugin Templateparser
-*
-* This is the template parser.
-* It is generated from the internal.templateparser.y file
-* @package Smarty
-* @subpackage Compiler
-* @author Uwe Tews
-*/
-
 class TP_yyToken implements ArrayAccess
 {
     public $string = '';
@@ -2805,7 +2795,7 @@ static public $yy_action = array(
     if ($this->security) {
         $this->compiler->trigger_template_error (self::Err2);
     }
-    $this->_retvalue = '->{'.$this->compileVariable("'".$this->yystack[$this->yyidx + -1]->minor."'").$this->yystack[$this->yyidx + 0]->minor.'}';
+    $this->_retvalue = '->{'.$this->compileVariable($this->yystack[$this->yyidx + -1]->minor).$this->yystack[$this->yyidx + 0]->minor.'}';
     }
 #line 2806 "smarty_internal_templateparser.php"
 #line 931 "smarty_internal_templateparser.y"
